# sistema-votacao

./: README.md  docker-compose.yml  prometheus.yml
architecture/: diagrama_arquitetura.puml  diagrama_sequencia.puml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_participants.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b1a67f7bb4de_create_initial_tables.py
backend/app/: main.py  tasks.py
backend/app/core/: celery_worker.py  config.py  database.py  dependencies.py  logging.py  prometheus.py
backend/app/models/: participante.py  voto.py
backend/app/routers/: metrica.py  voto.py
backend/app/schemas/: participante.py  voto.py
backend/app/services/: captcha_service.py  voto.py  voto_service.py
backend/scripts/: add_participantes.py  load_test.sh
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ParedaoVotacao.tsx
frontend/src/types/: react-google-recaptcha.d.ts
grafana/provisioning/dashboards/: dashboards.yml  votacao.json
prometheus/: prometheus.yml
